--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "node-wit": "^4.2.0",
-    "request": "^2.80.0"
+    "request": "^2.80.0",
+    "socket-io": "^1.0.0",
+    "socket.io": "^1.7.3"
   },
   "devDependencies": {}
 }
