--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node-wit": "^4.2.0",
     "request": "^2.80.0",
     "socket-io": "^1.0.0",
-    "socket.io": "^1.7.3"
+    "socket.io": "^1.7.3",
+    "util": "^0.10.3"
   },
   "devDependencies": {}
 }
